[gd_scene load_steps=3 format=3 uid="uid://nwwpap25473e"]

[ext_resource type="Theme" uid="uid://cleg8bdwkp3sy" path="res://TacticalSpaceCombat/Assets/Theme.tres" id="1_5c3y3"]
[ext_resource type="Script" path="res://TacticalSpaceCombat/end.gd" id="2_wjgak"]

[node name="End" type="CenterContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_5c3y3")
script = ExtResource("2_wjgak")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You Won!"

[node name="ButtonRetry" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Retry"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
